--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
    "dependencies": {
       "bcrypt": "^6.0.0",
       "chalk": "^4.1.2",
+      "compression": "^1.8.0",
+      "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
+      "helmet": "^8.1.0",
       "jsonwebtoken": "^9.0.2",
-      "mongoose": "^8.14.1"
+      "mongoose": "^8.14.1",
+      "morgan": "^1.10.0"
    },
    "devDependencies": {
       "@eslint/js": "^9.27.0",
