--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
       "dev": "nodemon index.js",
       "start": "node index.js",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "lint": "eslint .",
-      "lint:fix": "eslint . --fix"
+      "format": "prettier --write ."
    },
    "repository": {
       "type": "git",
@@ -28,6 +27,7 @@
       "bcrypt": "^6.0.0",
       "chalk": "^4.1.2",
       "compression": "^1.8.0",
+      "cookie-parser": "^1.4.7",
       "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
