--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
       "cors": "^2.8.5",
       "dotenv": "^16.5.0",
       "express": "^5.1.0",
-      "googleapis": "^149.0.0",
+      "fs": "^0.0.1-security",
       "helmet": "^8.1.0",
       "joi": "^17.13.3",
       "jsonwebtoken": "^9.0.2",
+      "mime-type": "^5.0.3",
       "mongoose": "^8.14.1",
-      "morgan": "^1.10.0"
+      "morgan": "^1.10.0",
+      "multer": "^2.0.0",
+      "stream": "^0.0.3"
    },
    "devDependencies": {
       "@eslint/js": "^9.27.0",
