--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
    "dependencies": {
       "bcrypt": "^6.0.0",
       "chalk": "^4.1.2",
+      "cloudinary": "^2.6.1",
       "compression": "^1.8.0",
       "cookie-parser": "^1.4.7",
       "cors": "^2.8.5",
